feat: openai_project_api_key resource
